syntax = "proto3";

package hello;

import "google/protobuf/timestamp.proto";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string message = 1;
  google.protobuf.Timestamp updated_time = 2;
}

message HelloResponse {
  message A {
    message B {
      google.protobuf.Timestamp time2 = 1;
    }
    google.protobuf.Timestamp time1 = 1;
    B b = 2;
  }
  string message = 1;
  google.protobuf.Timestamp updated_time = 2;
  google.protobuf.Timestamp time3 = 3;
  A a = 4;
}
